Prevent horizontal overflow.

--- a/common.css
+++ b/common.css
@@ -71,8 +71,6 @@ h1 {
 }
 
 h2 {
-    display: block;
-    width: 100%;
     font-size: 16px;
     font-weight: 600;
     margin: 16px 16px 0 16px;
